# lib_mysqludf_amqp

./: .gitignore  Makefile.am  configure.ac  lib_mysqludf_amqp_info.c  reinstalldb.sql  send.c
test/: CMakeLists.txt  test.c
